--- a/cdcommon/src/main/res/layout/empty_view.xml
+++ b/cdcommon/src/main/res/layout/empty_view.xml
@@ -11,7 +11,6 @@
         android:orientation="vertical"
         android:paddingTop="90dp">
 
-
         <ImageView
             android:visibility="gone"
             android:id="@+id/img"
@@ -21,6 +20,7 @@
 
         <TextView
             android:visibility="gone"
+            android:layout_marginBottom="80dp"
             android:id="@+id/tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
