--- a/app/src/main/res/layout/activity_message_detail.xml
+++ b/app/src/main/res/layout/activity_message_detail.xml
@@ -107,6 +107,7 @@
                     android:layout_weight="1" />
 
                 <ImageView
+                    android:id="@+id/img_share"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_marginRight="@dimen/layout_right_interval"
