--- a/app/src/main/res/layout/activity_fast_message_share.xml
+++ b/app/src/main/res/layout/activity_fast_message_share.xml
@@ -79,9 +79,10 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/img_url"
                         android:layout_width="70dp"
                         android:layout_height="70dp"
-                        android:src="@drawable/time" />
+                        tools:src="@drawable/time" />
 
 
                     <TextView
