--- a/app/src/main/res/layout/layout_message_commen.xml
+++ b/app/src/main/res/layout/layout_message_commen.xml
@@ -88,7 +88,7 @@
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_marginLeft="7dp"
-                        android:src="@drawable/gave_a_like_un" />
+                        android:src="@drawable/gave_a_like_2_un" />
 
                 </LinearLayout>
 
