--- a/app/src/main/res/layout/item_user_my_comments.xml
+++ b/app/src/main/res/layout/item_user_my_comments.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:id="@+id/lin_bg"
@@ -81,17 +83,27 @@
                 android:background="#f6f6f6"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/img_msg"
+                <android.support.v7.widget.CardView
                     android:layout_width="95dp"
                     android:layout_height="65dp"
-                    android:src="@drawable/default_pic" />
+                    app:cardCornerRadius="5dp">
+
+                    <ImageView
+                        android:id="@+id/img_msg"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/default_pic" />
+
+                </android.support.v7.widget.CardView>
+
 
                 <TextView
                     android:id="@+id/tv_msg_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_marginLeft="5dp"
                     android:ellipsize="end"
                     android:maxLines="2"
                     android:text="回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我回复 我"
