--- a/app/src/main/res/layout/activity_coin_bbs_details.xml
+++ b/app/src/main/res/layout/activity_coin_bbs_details.xml
@@ -128,12 +128,19 @@
                                 android:paddingRight="@dimen/layout_right_interval">
 
                                 <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/bbs_today_num"
+                                    tools:textColor="@color/text_black_cd"
+                                    tools:textSize="15sp" />
+
+                                <TextView
                                     android:id="@+id/tv_today_num"
                                     android:layout_width="0dp"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     tools:text="sdfsdfsfsd"
-                                    tools:textColor="@color/text_black_cd"
+                                    tools:textColor="@color/red"
                                     tools:textSize="15sp" />
 
                                 <TextView
