--- a/app/src/main/res/layout/item_message_reply_commen.xml
+++ b/app/src/main/res/layout/item_message_reply_commen.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="10dp"
         android:textColor="@color/text_black_cd"
         android:textSize="16sp"
-        tools:text="哈哈哈哈哈哈" />
+        tools:text="哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈" />
 
     <TextView
         android:id="@+id/tv_content"
