--- a/app/src/main/res/layout/item_message_three_pic.xml
+++ b/app/src/main/res/layout/item_message_three_pic.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -25,31 +26,54 @@
         android:orientation="horizontal"
         android:weightSum="3">
 
-        <ImageView
-            android:id="@+id/img_1"
+        <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
-            android:scaleType="centerCrop"
-            android:src="@drawable/default_pic" />
+            app:cardCornerRadius="5dp">
 
-        <ImageView
-            android:id="@+id/img_2"
+            <ImageView
+                android:id="@+id/img_1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/default_pic" />
+
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
-            android:scaleType="centerCrop"
-            android:src="@drawable/default_pic" />
+            app:cardCornerRadius="5dp">
 
-        <ImageView
-            android:id="@+id/img_3"
+            <ImageView
+                android:id="@+id/img_2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/default_pic" />
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="100dp"
+            android:layout_marginRight="10dp"
             android:layout_weight="1"
-            android:scaleType="centerCrop"
-            android:src="@drawable/default_pic" />
+            app:cardCornerRadius="5dp">
+
+            <ImageView
+                android:id="@+id/img_3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/default_pic" />
+
+        </android.support.v7.widget.CardView>
 
 
     </LinearLayout>
