--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -6,71 +6,145 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <FrameLayout
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <LinearLayout
+            android:id="@+id/layout_share"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:id="@+id/layout_share"
                 android:layout_width="match_parent"
-                android:layout_height="193dp"
-                android:layout_gravity="bottom"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:paddingBottom="20dp"
+                android:paddingTop="20dp">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="139dp"
-                    android:background="@color/white"
+                    android:id="@+id/lin_share_to_qq"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
                     android:orientation="vertical">
 
+                    <ImageView
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:src="@drawable/share_qq" />
+
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginTop="15dp"
-                        android:text="分享到"
-                        android:textColor="@color/fontColor_gray"
-                        android:textSize="14sp" />
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:background="@color/white"
+                        android:text="QQ"
+                        android:textColor="#737373"
+                        android:textSize="15sp" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <ImageView
-                            android:id="@+id/img_wx"
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-                            android:layout_marginLeft="15dp"
-                            android:layout_marginTop="23dp"
-                            android:background="@drawable/share_we_chat" />
-
-                        <ImageView
-                            android:id="@+id/img_pyq"
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
-                            android:layout_marginLeft="15dp"
-                            android:layout_marginTop="23dp"
-                            android:background="@drawable/share_we_pyq" />
-
-                    </LinearLayout>
 
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/txt_cancel"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="#f7f7f7"
+                <LinearLayout
+                    android:id="@+id/lin_share_to_wx"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:gravity="center"
-                    android:text="取消"
-                    android:textColor="@color/fontColor_gray"
-                    android:textSize="18sp">
+                    android:orientation="vertical">
 
-                </TextView>
+                    <ImageView
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:src="@drawable/share_we_chat" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:background="@color/white"
+                        android:text="微信"
+                        android:textColor="#737373"
+                        android:textSize="15sp" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/lin_share_to_pyq"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:src="@drawable/share_we_pyq" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:background="@color/white"
+                        android:text="朋友圈"
+                        android:textColor="#737373"
+                        android:textSize="15sp" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/lin_share_to_wb"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:src="@drawable/share_weibo" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="10dp"
+                        android:background="@color/white"
+                        android:text="微博"
+                        android:textColor="#737373"
+                        android:textSize="15sp" />
+
+
+                </LinearLayout>
+
 
             </LinearLayout>
 
-        </FrameLayout>
+
+            <TextView
+                android:id="@+id/txt_cancel"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="#f7f7f7"
+                android:gravity="center"
+                android:text="取消"
+                android:textColor="@color/fontColor_gray"
+                android:textSize="18sp" />
+
+
+        </LinearLayout>
+
 
     </LinearLayout>
 </layout>
