--- a/app/src/main/res/layout/item_market_coin_new.xml
+++ b/app/src/main/res/layout/item_market_coin_new.xml
@@ -14,7 +14,7 @@
 
         <LinearLayout
             android:layout_weight="1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -25,7 +25,7 @@
                 android:singleLine="true"
                 android:text="sdfsdfsd"
                 android:textColor="@color/text_black_cd"
-                android:textSize="17sp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -39,27 +39,24 @@
 
         </LinearLayout>
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="sdfsdfsdsdfsdfsd"
             android:textColor="@color/text_black_cd"
-            android:textSize="17sp" />
+            android:textSize="16sp" />
 
 
     </LinearLayout>
 
     <Button
         android:layout_gravity="center"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/width_market_btn"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="10dp"
         android:background="@drawable/market_green_bg"
         android:text="sdfsfs"
         android:textColor="@color/white"
