--- a/app/src/main/res/layout/item_market_platform.xml
+++ b/app/src/main/res/layout/item_market_platform.xml
@@ -9,37 +9,37 @@
     android:padding="15dp">
 
     <LinearLayout
+        android:layout_gravity="center_vertical"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/tv_platform"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:singleLine="true"
+                    android:layout_weight="1"
                     android:textColor="@color/text_black_cd"
-                    android:textSize="17sp"
+                    android:textSize="16sp"
                     tools:text="sdfsdfsd" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
-                    android:ellipsize="end"
-                    android:singleLine="true"
+                    android:layout_weight="1"
                     android:textColor="@color/app_text_gray"
                     android:textSize="12sp"
                     tools:text="sdfsdfsd" />
@@ -52,22 +52,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="7dp"
                 android:layout_weight="1"
-                android:ellipsize="end"
-                android:singleLine="true"
                 android:textColor="@color/app_text_gray"
                 android:textSize="15sp"
                 tools:text="sdfsdfsd" />
 
         </LinearLayout>
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="right"
             android:orientation="vertical">
@@ -76,11 +70,8 @@
                 android:id="@+id/tv_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ellipsize="end"
-                android:singleLine="true"
                 android:textColor="@color/text_black_cd"
-                android:textSize="17sp"
+                android:textSize="16sp"
                 tools:text="sdfsdfsd" />
 
             <TextView
@@ -88,7 +79,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:layout_weight="1"
                 android:textColor="@color/app_text_gray_3"
                 android:textSize="12sp"
                 tools:text="sdfsdfsd" />
@@ -100,7 +90,7 @@
 
     <Button
         android:id="@+id/btn_state"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/width_market_btn"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="15dp"
