--- a/app/src/main/res/layout/item_market_platform_all.xml
+++ b/app/src/main/res/layout/item_market_platform_all.xml
@@ -7,31 +7,25 @@
     android:padding="15dp">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:singleLine="true"
+        android:layout_weight="1"
         android:text="sdfsdfsd"
         android:textColor="@color/text_black_cd"
-        android:textSize="17sp" />
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:textSize="16sp" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:singleLine="true"
+        android:layout_weight="1"
+        android:gravity="right"
         android:text="sdfsdfsd"
         android:textColor="@color/text_black_cd"
-        android:textSize="17sp" />
+        android:textSize="16sp" />
 
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/width_market_btn"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:background="@drawable/market_green_bg"
