--- a/app/src/main/res/layout/item_market_platform_money.xml
+++ b/app/src/main/res/layout/item_market_platform_money.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
     android:orientation="horizontal"
     android:padding="15dp">
@@ -13,7 +14,8 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -21,50 +23,41 @@
                 android:id="@+id/tv_platform"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:text="sdfsdfsd"
+                tools:text="sdfsdfsd"
                 android:textColor="@color/text_black_cd"
-                android:textSize="17sp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/tv_coin_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="7dp"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:text="sdfsdfsd"
+                tools:text="sdfsdfsdsdfsdfsdsdfsdfsd"
                 android:textColor="@color/app_text_gray"
                 android:textSize="15sp" />
 
         </LinearLayout>
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:text="sdfsdfsd"
+            android:layout_weight="1"
+            android:gravity="right"
+            tools:text="sdfsdfsd"
             android:textColor="@color/text_black_cd"
-            android:textSize="17sp" />
+            android:textSize="16sp" />
 
 
     </LinearLayout>
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/width_market_btn"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="15dp"
         android:background="@drawable/market_green_bg"
-        android:text="sdfsfs"
+        tools:text="sdfsfs"
         android:textColor="@color/white"
         android:textSize="15sp" />
 
