--- a/app/src/main/res/layout/item_market_search.xml
+++ b/app/src/main/res/layout/item_market_search.xml
@@ -11,18 +11,17 @@
     android:paddingTop="15dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_coin_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:singleLine="true"
             android:textColor="@color/text_black_cd"
-            android:textSize="17sp"
+            android:textSize="16sp"
             tools:text="sdfsdfsd" />
 
         <TextView
@@ -30,8 +29,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
-            android:ellipsize="end"
-            android:singleLine="true"
             android:textColor="@color/app_text_gray"
             android:textSize="15sp"
             tools:text="sdfsdfsd" />
@@ -39,14 +36,11 @@
     </LinearLayout>
 
 
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
-
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="right"
         android:orientation="horizontal">
 
         <LinearLayout
@@ -62,7 +56,7 @@
                 android:ellipsize="end"
                 android:singleLine="true"
                 android:textColor="@color/text_black_cd"
-                android:textSize="17sp"
+                android:textSize="16sp"
                 tools:text="sdfsdfsd" />
 
             <TextView
@@ -83,7 +77,7 @@
 
     <Button
         android:id="@+id/btn_state"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/width_market_btn"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="15dp"
