--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="msg_state_size">14sp</dimen>
     <dimen name="msg_title">16sp</dimen>
     <dimen name="market_bg_radius">5dp</dimen>
+    <dimen name="width_market_btn">65dp</dimen>
+    <dimen name="height_market_btn">35dp</dimen>
 </resources>
